@@ -1,3 +1,6 @@
+from plone import api
+
+
 SEND_ANYWAY_ENV_VAR = 'GETSENTRY_ALWAYS_SEND'
 DSN_ENV_VAR = 'GETSENTRY_DSN'
 ENVIRONMENT_ENV_VAR = 'GETSENTRY_ENVIRONMENT'
@@ -7,3 +10,7 @@ USER_FEEDBACK_ENV_VAR = 'GETSENTRY_USER_FEEDBACK'
 IGNORED_JS = 'GETSENTRY_JS_TO_IGNORE'
 IGNORED_JS_ERRORS = 'GETSENTRY_JS_ERRORS_TO_IGNORE'
 ALLOWED_JS = 'GETSENTRY_JS_TO_ALLOW'
+
+
+IS_PLONE_4 = api.env.plone_version().startswith("4")
+IS_PLONE_5 = api.env.plone_version().startswith("5")
